[gd_scene load_steps=21 format=3 uid="uid://do48ita2qa5w3"]

[ext_resource type="Script" uid="uid://6cu4ae266lq5" path="res://scripts/multi_join_menu.gd" id="1_g7ip2"]
[ext_resource type="FontFile" uid="uid://bw124sa6qjoe5" path="res://assets/fonts/Pixel Game.otf" id="3_ddh73"]
[ext_resource type="FontFile" uid="uid://v66tkdbnak7b" path="res://assets/fonts/friendlyscribbles.ttf" id="4_8evcp"]
[ext_resource type="StyleBox" uid="uid://btig115l18rn6" path="res://shader/option_panel.tres" id="5_ntsm0"]
[ext_resource type="StyleBox" uid="uid://wwxkjlermjyr" path="res://shader/tab_selected.tres" id="6_2qqq0"]
[ext_resource type="StyleBox" uid="uid://bwwdbs88vfrrs" path="res://shader/tab_unselected.tres" id="7_bvfn0"]
[ext_resource type="Theme" uid="uid://b1iiejjh6n8br" path="res://shader/option_label.tres" id="8_104dt"]
[ext_resource type="Texture2D" uid="uid://bcqwv18qvcd8i" path="res://shader/empty_img.tres" id="9_ce0d5"]
[ext_resource type="StyleBox" uid="uid://dy5mgthdnoj4v" path="res://shader/slider_right.tres" id="10_bp5v2"]
[ext_resource type="StyleBox" uid="uid://b5fugh2mkpmer" path="res://shader/slider_left.tres" id="11_dv87g"]
[ext_resource type="StyleBox" uid="uid://djajkbveub13x" path="res://shader/tab_hover.tres" id="16_j607q"]
[ext_resource type="StyleBox" uid="uid://cvfgbrmlywkdm" path="res://shader/button_hovered.tres" id="17_08ecq"]
[ext_resource type="StyleBox" uid="uid://gytvjmrfo5o1" path="res://shader/button_pressed.tres" id="18_k16ul"]
[ext_resource type="StyleBox" uid="uid://qd1csl7ycp6a" path="res://shader/button_normal.tres" id="19_xyjaq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wq4iw"]
content_margin_left = 24.0
content_margin_top = 24.0
content_margin_right = 24.0
content_margin_bottom = 8.0
bg_color = Color(0, 0.778775, 0.71613, 1)
border_color = Color(0.968627, 0.905882, 0.745098, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7x6hk"]
bg_color = Color(0, 0.623529, 0.572549, 1)
border_width_left = 7
border_width_bottom = 19
border_color = Color(0, 0.32549, 0.4, 1)
corner_radius_top_left = 10
corner_radius_bottom_left = 10

[sub_resource type="Animation" id="Animation_1d4sf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Title/VBoxContainer:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SettingsTabs/LeftTab:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SettingsTabs/RightTab:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(960, 0)]
}

[sub_resource type="Animation" id="Animation_1t40g"]
resource_name = "enter"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Title/VBoxContainer:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.234325, 0.3),
"transitions": PackedFloat32Array(2.07053, 0.450625, 1),
"update": 0,
"values": [Vector2(0, -900), Vector2(0, 30), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SettingsTabs/LeftTab:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.233333),
"transitions": PackedFloat32Array(2, 1),
"update": 0,
"values": [Vector2(-650, 0), Vector2(0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SettingsTabs/RightTab:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.233333),
"transitions": PackedFloat32Array(2, 1),
"update": 0,
"values": [Vector2(1610, 0), Vector2(960, 0)]
}

[sub_resource type="Animation" id="Animation_c2ct2"]
resource_name = "exit"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Title/VBoxContainer:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -900)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SettingsTabs/LeftTab:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-650, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SettingsTabs/RightTab:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector2(960, 0), Vector2(1600, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1d4sf"]
_data = {
&"RESET": SubResource("Animation_1d4sf"),
&"enter": SubResource("Animation_1t40g"),
&"exit": SubResource("Animation_c2ct2")
}

[node name="JoinMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_g7ip2")

[node name="Title" type="Control" parent="."]
z_index = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Title"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 40

[node name="Separator" type="Control" parent="Title/VBoxContainer"]
layout_mode = 2

[node name="GameTitle" type="Label" parent="Title/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
theme_override_colors/font_shadow_color = Color(0.221331, 0.419319, 0.580994, 1)
theme_override_constants/shadow_offset_x = 8
theme_override_constants/shadow_offset_y = 5
theme_override_constants/outline_size = 35
theme_override_constants/shadow_outline_size = 55
theme_override_fonts/font = ExtResource("3_ddh73")
theme_override_font_sizes/font_size = 180
text = "Joining"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SettingsTabs" type="Control" parent="."]
custom_minimum_size = Vector2(100, 0)
layout_mode = 3
anchors_preset = 0
offset_right = 1600.0
offset_bottom = 900.0

[node name="LeftTab" type="Control" parent="SettingsTabs"]
z_index = 2
layout_mode = 1
anchor_right = 0.4
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="TabContainer" type="TabContainer" parent="SettingsTabs/LeftTab"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.25
anchor_right = 1.0
anchor_bottom = 0.85
grow_horizontal = 0
grow_vertical = 2
theme_override_colors/font_unselected_color = Color(0, 0.32549, 0.4, 1)
theme_override_colors/font_hovered_color = Color(0, 0.32549, 0.4, 1)
theme_override_colors/font_selected_color = Color(0.968627, 0.905882, 0.745098, 1)
theme_override_constants/side_margin = 17
theme_override_fonts/font = ExtResource("4_8evcp")
theme_override_font_sizes/font_size = 30
theme_override_styles/panel = ExtResource("5_ntsm0")
theme_override_styles/tab_selected = ExtResource("6_2qqq0")
theme_override_styles/tab_hovered = SubResource("StyleBoxFlat_wq4iw")
theme_override_styles/tab_unselected = ExtResource("7_bvfn0")
tab_alignment = 2
current_tab = 0
tab_focus_mode = 0

[node name="Joining" type="TabBar" parent="SettingsTabs/LeftTab/TabContainer"]
layout_mode = 2
tab_alignment = 1
metadata/_tab_index = 0

[node name="MarginContainer" type="MarginContainer" parent="SettingsTabs/LeftTab/TabContainer/Joining"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 48
theme_override_constants/margin_top = 48
theme_override_constants/margin_right = 48
theme_override_constants/margin_bottom = 48

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsTabs/LeftTab/TabContainer/Joining/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 52

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsTabs/LeftTab/TabContainer/Joining/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 14

[node name="AddressBox" type="HBoxContainer" parent="SettingsTabs/LeftTab/TabContainer/Joining/MarginContainer/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_constants/separation = 17

[node name="Label" type="Label" parent="SettingsTabs/LeftTab/TabContainer/Joining/MarginContainer/VBoxContainer/VBoxContainer/AddressBox"]
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
theme = ExtResource("8_104dt")
theme_override_colors/font_color = Color(0.968627, 0.905882, 0.745098, 1)
text = "IP Address:"

[node name="TextEdit" type="TextEdit" parent="SettingsTabs/LeftTab/TabContainer/Joining/MarginContainer/VBoxContainer/VBoxContainer/AddressBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("4_8evcp")
theme_override_font_sizes/font_size = 30

[node name="join" type="Button" parent="SettingsTabs/LeftTab/TabContainer/Joining/MarginContainer/VBoxContainer/VBoxContainer/AddressBox"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
size_flags_vertical = 4
focus_mode = 0
theme_override_colors/font_hover_pressed_color = Color(0.984314, 0.94902, 0.866667, 1)
theme_override_colors/font_hover_color = Color(0.983527, 0.950464, 0.865413, 1)
theme_override_colors/font_color = Color(0.968627, 0.905882, 0.745098, 1)
theme_override_colors/font_pressed_color = Color(0.968627, 0.905882, 0.745098, 1)
theme_override_fonts/font = ExtResource("4_8evcp")
theme_override_font_sizes/font_size = 28
theme_override_styles/hover = ExtResource("17_08ecq")
theme_override_styles/pressed = ExtResource("18_k16ul")
theme_override_styles/normal = ExtResource("19_xyjaq")
text = "Join"

[node name="Port" type="HBoxContainer" parent="SettingsTabs/LeftTab/TabContainer/Joining/MarginContainer/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_constants/separation = 17

[node name="Label" type="Label" parent="SettingsTabs/LeftTab/TabContainer/Joining/MarginContainer/VBoxContainer/VBoxContainer/Port"]
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
theme = ExtResource("8_104dt")
theme_override_colors/font_color = Color(0.968627, 0.905882, 0.745098, 1)
text = "Port:"

[node name="TextEdit" type="TextEdit" parent="SettingsTabs/LeftTab/TabContainer/Joining/MarginContainer/VBoxContainer/VBoxContainer/Port"]
custom_minimum_size = Vector2(223, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("4_8evcp")
theme_override_font_sizes/font_size = 30

[node name="Namebox" type="HBoxContainer" parent="SettingsTabs/LeftTab/TabContainer/Joining/MarginContainer/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_constants/separation = 17

[node name="Label" type="Label" parent="SettingsTabs/LeftTab/TabContainer/Joining/MarginContainer/VBoxContainer/VBoxContainer/Namebox"]
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
theme = ExtResource("8_104dt")
theme_override_colors/font_color = Color(0.968627, 0.905882, 0.745098, 1)
text = "Name:"

[node name="TextEdit" type="TextEdit" parent="SettingsTabs/LeftTab/TabContainer/Joining/MarginContainer/VBoxContainer/VBoxContainer/Namebox"]
custom_minimum_size = Vector2(223, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("4_8evcp")
theme_override_font_sizes/font_size = 30

[node name="PlayersBox" type="HBoxContainer" parent="SettingsTabs/LeftTab/TabContainer/Joining/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_constants/separation = 17

[node name="Label" type="Label" parent="SettingsTabs/LeftTab/TabContainer/Joining/MarginContainer/VBoxContainer/PlayersBox"]
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
theme = ExtResource("8_104dt")
theme_override_colors/font_color = Color(0.968627, 0.905882, 0.745098, 1)
text = "Players:"

[node name="ScrollContainer" type="ScrollContainer" parent="SettingsTabs/LeftTab/TabContainer/Joining/MarginContainer/VBoxContainer/PlayersBox"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
size_flags_horizontal = 3

[node name="Playerlist" type="Label" parent="SettingsTabs/LeftTab/TabContainer/Joining/MarginContainer/VBoxContainer/PlayersBox/ScrollContainer"]
layout_mode = 2
theme = ExtResource("8_104dt")
theme_override_colors/font_color = Color(0.968627, 0.905882, 0.745098, 1)

[node name="RightTab" type="Control" parent="SettingsTabs"]
z_index = 2
layout_mode = 1
anchor_left = 0.6
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -6.10352e-05
grow_horizontal = 0
grow_vertical = 2
mouse_filter = 1
metadata/_edit_use_anchors_ = true

[node name="TabContainer" type="TabContainer" parent="SettingsTabs/RightTab"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.25
anchor_right = 1.0
anchor_bottom = 0.85
grow_horizontal = 0
grow_vertical = 2
theme_override_colors/font_unselected_color = Color(0, 0.32549, 0.4, 1)
theme_override_colors/font_hovered_color = Color(0, 0.32549, 0.4, 1)
theme_override_colors/font_selected_color = Color(0.968627, 0.905882, 0.745098, 1)
theme_override_constants/side_margin = 19
theme_override_fonts/font = ExtResource("4_8evcp")
theme_override_font_sizes/font_size = 30
theme_override_styles/panel = SubResource("StyleBoxFlat_7x6hk")
theme_override_styles/tab_selected = ExtResource("6_2qqq0")
theme_override_styles/tab_hovered = ExtResource("16_j607q")
theme_override_styles/tab_unselected = ExtResource("7_bvfn0")
current_tab = 0
metadata/_edit_use_anchors_ = true

[node name="Sound" type="TabBar" parent="SettingsTabs/RightTab/TabContainer"]
layout_mode = 2
metadata/_tab_index = 0

[node name="MarginContainer" type="MarginContainer" parent="SettingsTabs/RightTab/TabContainer/Sound"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 48
theme_override_constants/margin_top = 48
theme_override_constants/margin_right = 48
theme_override_constants/margin_bottom = 48

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsTabs/RightTab/TabContainer/Sound/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 75

[node name="MasterBox" type="HBoxContainer" parent="SettingsTabs/RightTab/TabContainer/Sound/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 17

[node name="Label" type="Label" parent="SettingsTabs/RightTab/TabContainer/Sound/MarginContainer/VBoxContainer/MasterBox"]
custom_minimum_size = Vector2(220, 0)
layout_mode = 2
theme = ExtResource("8_104dt")
theme_override_colors/font_color = Color(0.968627, 0.905882, 0.745098, 1)
text = "Master volume:"

[node name="HSlider" type="HSlider" parent="SettingsTabs/RightTab/TabContainer/Sound/MarginContainer/VBoxContainer/MasterBox"]
custom_minimum_size = Vector2(230, 0)
layout_mode = 2
size_flags_vertical = 4
focus_mode = 0
theme_override_icons/grabber = ExtResource("9_ce0d5")
theme_override_icons/grabber_highlight = ExtResource("9_ce0d5")
theme_override_icons/grabber_disabled = ExtResource("9_ce0d5")
theme_override_styles/slider = ExtResource("10_bp5v2")
theme_override_styles/grabber_area = ExtResource("11_dv87g")
theme_override_styles/grabber_area_highlight = ExtResource("11_dv87g")
value = 50.0

[node name="Label2" type="Label" parent="SettingsTabs/RightTab/TabContainer/Sound/MarginContainer/VBoxContainer/MasterBox"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme = ExtResource("8_104dt")
theme_override_colors/font_color = Color(0.968627, 0.905882, 0.745098, 1)
text = "50"

[node name="MusicBox" type="HBoxContainer" parent="SettingsTabs/RightTab/TabContainer/Sound/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 17

[node name="Label" type="Label" parent="SettingsTabs/RightTab/TabContainer/Sound/MarginContainer/VBoxContainer/MusicBox"]
custom_minimum_size = Vector2(220, 0)
layout_mode = 2
theme = ExtResource("8_104dt")
theme_override_colors/font_color = Color(0.968627, 0.905882, 0.745098, 1)
text = "Music volume:"

[node name="HSlider" type="HSlider" parent="SettingsTabs/RightTab/TabContainer/Sound/MarginContainer/VBoxContainer/MusicBox"]
custom_minimum_size = Vector2(230, 0)
layout_mode = 2
size_flags_vertical = 4
focus_mode = 0
theme_override_icons/grabber = ExtResource("9_ce0d5")
theme_override_icons/grabber_highlight = ExtResource("9_ce0d5")
theme_override_icons/grabber_disabled = ExtResource("9_ce0d5")
theme_override_styles/slider = ExtResource("10_bp5v2")
theme_override_styles/grabber_area = ExtResource("11_dv87g")
theme_override_styles/grabber_area_highlight = ExtResource("11_dv87g")
value = 50.0

[node name="Label2" type="Label" parent="SettingsTabs/RightTab/TabContainer/Sound/MarginContainer/VBoxContainer/MusicBox"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme = ExtResource("8_104dt")
theme_override_colors/font_color = Color(0.968627, 0.905882, 0.745098, 1)
text = "50"

[node name="SFXBox" type="HBoxContainer" parent="SettingsTabs/RightTab/TabContainer/Sound/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 17

[node name="Label" type="Label" parent="SettingsTabs/RightTab/TabContainer/Sound/MarginContainer/VBoxContainer/SFXBox"]
custom_minimum_size = Vector2(220, 0)
layout_mode = 2
theme = ExtResource("8_104dt")
theme_override_colors/font_color = Color(0.968627, 0.905882, 0.745098, 1)
text = "SFX volume:"

[node name="HSlider" type="HSlider" parent="SettingsTabs/RightTab/TabContainer/Sound/MarginContainer/VBoxContainer/SFXBox"]
custom_minimum_size = Vector2(230, 0)
layout_mode = 2
size_flags_vertical = 4
focus_mode = 0
theme_override_icons/grabber = ExtResource("9_ce0d5")
theme_override_icons/grabber_highlight = ExtResource("9_ce0d5")
theme_override_icons/grabber_disabled = ExtResource("9_ce0d5")
theme_override_styles/slider = ExtResource("10_bp5v2")
theme_override_styles/grabber_area = ExtResource("11_dv87g")
theme_override_styles/grabber_area_highlight = ExtResource("11_dv87g")
value = 50.0

[node name="Label2" type="Label" parent="SettingsTabs/RightTab/TabContainer/Sound/MarginContainer/VBoxContainer/SFXBox"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme = ExtResource("8_104dt")
theme_override_colors/font_color = Color(0.968627, 0.905882, 0.745098, 1)
text = "50"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_1d4sf")
}

[connection signal="pressed" from="SettingsTabs/LeftTab/TabContainer/Joining/MarginContainer/VBoxContainer/VBoxContainer/AddressBox/join" to="." method="_on_join_pressed"]
[connection signal="drag_ended" from="SettingsTabs/RightTab/TabContainer/Sound/MarginContainer/VBoxContainer/MasterBox/HSlider" to="." method="_on_sfx_slider_drag_ended"]
[connection signal="value_changed" from="SettingsTabs/RightTab/TabContainer/Sound/MarginContainer/VBoxContainer/MasterBox/HSlider" to="." method="_on_master_slider_value_changed"]
[connection signal="value_changed" from="SettingsTabs/RightTab/TabContainer/Sound/MarginContainer/VBoxContainer/MusicBox/HSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="drag_ended" from="SettingsTabs/RightTab/TabContainer/Sound/MarginContainer/VBoxContainer/SFXBox/HSlider" to="." method="_on_sfx_slider_drag_ended"]
[connection signal="value_changed" from="SettingsTabs/RightTab/TabContainer/Sound/MarginContainer/VBoxContainer/SFXBox/HSlider" to="." method="_on_sfx_slider_value_changed"]
